--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -11,7 +11,7 @@
   <input type="password" name="password" id="password" />
   <label for="confirmPassword">Confirm Password:</label>
   <input type="password" name="confirmPassword" id="confirmPassword" />
-  <button type="submit">SIGN UP</button>
+  <button type="submit">LETS GET COOKING!</button>
 </form>
 
 <p class="error-msg"><%= error %></p>
