--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,9 @@
   <nav>
     <a href="/">🏠</a>
     <div>
-      <a href="/unicorns">ALL UNICORNS</a>
+      <a href="/recipes">ALL UNICORNS</a>
       <% if (user) { %>
-        <a href="/unicorns/new">ADD UNICORN</a>
+        <a href="/recipes/new">ADD UNICORN</a>
         <a href="/auth/sign-out">SIGN OUT</a>
         <span><%= user.name %></span>
       <% } else { %>
