--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,10 @@
 <%- include('./partials/header.ejs') %>
 
-<h1>Home</h1>
+<% if (user) { %>
+  <h1>WELCOME BACK CHEF <%= user.name.toUpperCase() %></h1>
+<% } else { %>
+  <h1>WELCOME TO COOKSY</h1>
+<% } %>
+<img src="images/cooksy no bg.png" alt="Cooksy Logo" width="600" height="auto">
 
 <%- include('./partials/footer.ejs') %>
