Complete new and index

--- a/views/recipes/index.ejs
+++ b/views/recipes/index.ejs
@@ -6,8 +6,8 @@
     <ul>
        <% recipes.forEach((recipe) => {%>
         <li>
-            <a gref="/recipes/<%= recipe._id%>">
-            <%= recipe.address %>
+            <a href="/recipes/<%= recipe._id%>">
+                <%= recipe.name %>
             </a>
         </li>
         <% }) %> 
