Community Page setup

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     <div>
       <a href="/recipes">EXPLORE GLOBAL RECIPES</a>
       <% if (user) { %>
-        <a href="/community">COOKSY COMMUNITY</a>
+        <a href="/users">COOKSY COMMUNITY</a>
         <a href="/recipes/new">ADD A RECIPE</a>
         <a href="/recipes/myCookBook">MY COOKBOOK</a>
         <a href="/recipes/favs">MY FAVS</a>
