--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,3 +164,23 @@ button:hover {
   border-bottom: 1px solid #eee;
   padding-bottom: 0.5rem;
 }
+
+.profile-pic {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 8px;
+  margin-top: -90px ;
+  margin-bottom: -10px;
+
+}
+
+.profile-pic-large {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 12px;
+  vertical-align: middle;
+}
