--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,10 @@
         <a href="/recipes/favs">MY FAVS</a>
         <a href="/community/:id">MY PROFILE</a>
         <a href="/auth/sign-out">SIGN OUT</a>
-        <span>CHEF: <%= user.name.toUpperCase() %></span>
+        <span>
+          <img src="<%= user.image || '/images/Stockprofile.png' %>" alt="Profile pic" class="profile-pic" />
+          CHEF: <%= user.name.toUpperCase() %>
+        </span>
       <% } else { %>
         <a href="/auth/sign-up">SIGN UP</a>
         <a href="/auth/sign-in">SIGN IN</a>
