Complete Favorite Function

--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -5,7 +5,7 @@
   <div>
     <h1>
         <img src="<%= user.image || '/images/Stockprofile.png' %>" class="profile-pic-large" alt="Profile" />
-        <%= user.name %>'s PROFILE
+        <%= user.name %>'s COOKBOOK
     </h1>
 
 <% if (recipes && recipes.length > 0) { %>
