--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,9 +15,8 @@
       <% if (user) { %>
         <a href="/users">COOKSY COMMUNITY</a>
         <a href="/recipes/new">ADD A RECIPE</a>
-        <a href="/recipes/myCookBook">MY COOKBOOK</a>
-        <a href="/recipes/favs">MY FAVS</a>
-        <a href="/users/<%= user._id %>">MY PROFILE</a>
+        <a href="/favorites">MY FAVS</a>
+        <a href="/users/<%= user._id %>">MY COOKBOOK</a>
         <a href="/auth/sign-out">SIGN OUT</a>
         <span>
           <img src="<%= user.image || '/images/Stockprofile.png' %>" alt="Profile-pic" class="profile-pic" />
