--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,20 @@
         <a href="/users/<%= user._id %>">MY COOKBOOK</a>
         <a href="/auth/sign-out">SIGN OUT</a>
         <span>
-          <img src="<%= user.image || '/images/Stockprofile.png' %>" alt="Profile-pic" class="profile-pic" />
+      <% if (user) { %>
+        <% const encodedSeed = encodeURIComponent(user.name); %>
+          <img 
+            src="https://api.dicebear.com/9.x/fun-emoji/svg?seed=<%= encodedSeed %>&backgroundColor=ffdfbf&eyes=closed,closed2,cute,glasses,love,pissed,plain,sad,shades,sleepClose,stars&mouth=cute,drip,lilSmile,pissed,plain,sad,shout,shy,sick,smileLol,smileTeeth,tongueOut,wideSmile" 
+            alt="Profile-pic"
+            class="profile-pic"
+          />
+      <% } else { %>
+          <img 
+            src="/images/Stockprofile.png"
+            alt="Default Profile-pic"
+            class="profile-pic"
+          />
+      <% } %>
           CHEF: <%= user.name.toUpperCase() %>
         </span>
       <% } else { %>
