--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -3,11 +3,26 @@
 
 <h1>Explore The COOKSY Community</h1>
 
-  <div>
+  <div class="user-container">
       <% users.forEach(user => { %>
         <div class="user card">
-            <img src="<%= user.image || '/images/Stockprofile.png' %>" alt="Profile" class="profile-pic" />
-            <a href="/users/<%= user._id %>"><%= user.name %></a>
+          <% if (user) { %>
+            <% const encodedSeed = encodeURIComponent(user.name); %>
+              <img 
+                src="https://api.dicebear.com/9.x/fun-emoji/svg?seed=<%= encodedSeed %>&backgroundColor=ffdfbf&eyes=closed,closed2,cute,glasses,love,pissed,plain,sad,shades,sleepClose,stars&mouth=cute,drip,lilSmile,pissed,plain,sad,shout,shy,sick,smileLol,smileTeeth,tongueOut,wideSmile" 
+                alt="Profile-pic"
+                class="user-card-img"
+              />
+          <% } else { %>
+              <img 
+                src="/images/Stockprofile.png"
+                alt="Default Profile-pic"
+                class="user-card-img"
+                />
+              <% } %>
+        <div class="username">
+          <a href="/users/<%= user._id %>"><%= user.name %></a>
+        </div>
         </div>
       <% }) %>
   </div>  
