--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
   <nav>
     <a href="/">HOME</a>
     <div>
-      <a href="/recipes">EXPLORE GLOBAL RECIPES</a>
+      <a href="/recipes">EXPLORE RECIPES</a>
       <% if (user) { %>
         <a href="/users">COOKSY COMMUNITY</a>
         <a href="/recipes/new">ADD A RECIPE</a>
